--- a/build.gradle
+++ b/build.gradle
@@ -12,15 +12,9 @@ buildscript {
 				username 'ii-bda'
 				password '6ozhS683'
 			}}
-		maven {
-			url "https://plugins.gradle.org/m2/"
-		}
-		jcenter()
 	}
 	dependencies {
-		classpath group: 'de.interactive_instruments.bda', name: 'etf-bda', version:'1.0.+'
-		classpath 'net.researchgate:gradle-release:2.3.4'
-		classpath "gradle.plugin.nl.javadude.gradle.plugins:license-gradle-plugin:0.12.1"
+		classpath group: 'de.interactive_instruments.bda', name: 'etf-bda', version:'1.0.20'
 	}
 	dependencies {
 		ant.unjar src: configurations.classpath.files.find {it.path.contains('etf')}, dest: 'build/gradle'
@@ -38,7 +32,6 @@ apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'eclipse'
 
-ext.logbackVersion = '1.1.2'
 ext.deegreeVersion = '3.3.17'
 ext.basexVersion = '7.9'
 
@@ -96,23 +89,21 @@ dependencies {
 		exclude group: 'postgresql'
 		exclude group: 'commons-logging'
 	}
+	compile "org.basex:basex-api:$basexVersion"
 
-    compile "org.basex:basex-api:$basexVersion"
+	compile group: 'org.slf4j', name: 'slf4j-api', version: etf_slf4jApiVersion
 
-	compile group: 'org.slf4j', name: 'slf4j-api', version:'1.7.5'
-
-	compile group: 'xerces', name: 'xercesImpl', version:'2.11.0.beta'
-  compile group: 'xml-apis', name: 'xml-apis', version:'1.4.01'
+	compile group: 'xerces', name: 'xercesImpl', version: etf_xercesVersion
+  	compile group: 'xml-apis', name: 'xml-apis', version: etf_xmlApisVersion
 	compile('xalan:xalan:2.7.2') {
 		exclude group: 'xerces'
 		exclude group: 'xml-apis'
 	}
 	compile group: 'javax.xml.bind', name: 'jaxb-api', version:'2.2.12'
 
-	testCompile group: 'junit', name: 'junit', version: '4.11'
-  testCompile "org.basex:basex:$basexVersion"
-  testCompile "ch.qos.logback:logback-classic:$logbackVersion"
-	testCompile "ch.qos.logback:logback-core:$logbackVersion"
+	testCompile group: 'junit', name: 'junit', version: etf_junitTestVersion
+  	testCompile "org.basex:basex:$basexVersion"
+	testCompile group: 'ch.qos.logback', name: 'logback-classic', version: etf_logbackVersion
 
 }
 
