--- a/build.gradle
+++ b/build.gradle
@@ -101,7 +101,8 @@ dependencies {
 	}
 	compile group: 'javax.xml.bind', name: 'jaxb-api', version:'2.2.12'
 
-	testCompile group: 'junit', name: 'junit', version: etf_junitTestVersion
+    testCompile group: 'net.sf.saxon', name: 'Saxon-HE', version: '9.7.0-4'
+    testCompile group: 'junit', name: 'junit', version: etf_junitTestVersion
   	testCompile "org.basex:basex:$basexVersion"
 	testCompile group: 'ch.qos.logback', name: 'logback-classic', version: etf_logbackVersion
 
