--- a/src/main/resources/validator-core-messages.properties
+++ b/src/main/resources/validator-core-messages.properties
@@ -1,124 +1,46 @@
-validator.core.validation.message-type.fatal=Fataal
-validator.core.validation.message-type.error=Fout
-validator.core.validation.message-type.warning=Waarschuwing
-validator.core.validation.message-type.notice=Opmerking
+validator.core.validation.message-type.fatal=Fatal
+validator.core.validation.message-type.error=Error
+validator.core.validation.message-type.warning=Warning
+validator.core.validation.message-type.notice=Notice
 
-validator.core.validation.task-version.component=component: {0}
-validator.core.validation.task-version.file=bestand: {0}
-validator.core.validation.task-version.separator=,
+validator.core.validation.exception.file=File is missing or cannot be read.
+validator.core.validation.exception=An exception occured during the validation process.
+validator.core.validation.start=Validation started: {0}
+validator.core.validation.end=Validation finished: {0}
 
-validator.core.validation.file.type.error=Het type XML bestand kan niet worden vastgesteld: {0}
-validator.core.validation.file.standard.error=De standaard van het bestand kan niet worden vastgesteld. Mogelijk foute namespace gebruikt ? Bekende namespaces: {0}
-validator.core.validation.exception.file=Het planbestand ontbreekt of kan niet gelezen worden
-validator.core.validation.exception=Er heeft zich een probleem voorgedaan tijdens het valideren
-validator.core.validation.start=Validatie gestart: {0}
-validator.core.validation.end=Validatie afgerond: {0}
+validator.core.validation.encoding.exception=Encoding error: {0}
+validator.core.validation.encoding.utf8.wrong-character=Incorrect UTF-8 character detected. Property: line {0}, column {1}, absolute position {2}, value: {3}, context: "{4}".
 
-validator.core.validation.encoding.assumed-encoding=Gebruikte bestandscodering: {0}
-validator.core.validation.encoding.missing-encoding=In dit XML bestand ontbreekt de encoding. Als default wordt daarom {0} encoding verondersteld. Aanbevolen wordt de encoding expliciet in dit XML bestand op te nemen.
-validator.core.validation.encoding.file-encoding-notsupported=De gebruikte bestandscodering ({0}) wordt niet ondersteund. Gebruik een van de volgende bestand codering: {2}
-validator.core.validation.encoding.xml-encoding-notsupported=De gebruikte XML codering ({1}) wordt niet ondersteund. Gebruik een van de volgende XML codering: {2} 
-validator.core.validation.encoding.encoding-conflict=Conflict tussen bestandscodering ({0}) en codering in xml bestand ({1}).
-validator.core.validation.encoding.utf8.wrong-character=Onjuist UTF-8 karakter gedetecteerd. Eigenschappen: regel {0}, kolom {1}, absolute positie {2}, waarde: {3}, context: "{4}".
+# validator.core.validation.geometry.problem-location-text=Problem: ({0} {1})
+validator.core.validation.geometry.coordinates-text-simple=Start: ({0} {1}), end: ({2} {3})
+validator.core.validation.geometry.coordinates-text=Start: ({0} {1}), end: ({2} {3}), problem: ({4} {5})
+validator.core.validation.geometry.unknown-exception=Unknown error. Possibly no coordinates available.
+validator.core.validation.geometry.coordinates-position=Element {0} at position {1} within element {2} (gml:id: {3})
+validator.core.validation.geometry.valid=The file is geometrically valid
+validator.core.validation.geometry.no-gml=No known GML version found (found namespace: {0}).
+validator.core.validation.geometry.gmlversion=Detected GML standard version: GML{0}.
 
-validator.core.validation.geometry.problem-location-text=Probleem: ({0} {1})
-validator.core.validation.geometry.coordinates-text-simple=Begin: ({0} {1}), eind: ({2} {3})
-validator.core.validation.geometry.coordinates-text=Begin: ({0} {1}), eind: ({2} {3}), probleem: ({4} {5})
-validator.core.validation.geometry.unknown-exception=Onbekende fout. Mogelijk geen coordinaten
-validator.core.validation.geometry.coordinates-position=Element {0} op positie {1} binnen element {2} (gmlId: {3})
-validator.core.validation.geometry.valid=Het bestand is geometrisch valide
-validator.core.validation.geometry.no-srsname=Geen srsName gespecificeerd.
-validator.core.validation.geometry.no-gml=Geen bekende GML versie gevonden (gevonden namespace: {0}).
-validator.core.validation.geometry.gmlversion=Geconstateerde GML standaard versie: GML{0}.
-
+validator.core.validation.geometry.event.unexpected=Encountered unexpected geometry validation event ({2}) when processing element {1} (gml:id: {0}). 
 validator.core.validation.geometry.problem-location=({0} {1})
-validator.core.validation.geometry.curvediscontinuity=Invalide boog. Boog niet gecontinueerd binnen element {1}, (gmlId: {0} met coordinaten: {2}...). Startpunt {3} van segment {4} is niet gelijk aan eindpunt {5} van het vorige segment.
-#validator.core.validation.geometry.curvepointduplication=Invalide boog. Dubbele coordinaten binnen element {1}, (gmlId: {0}). Probleem: {2}
-validator.core.validation.geometry.curveselfintersection=Invalide boog. Boog doorsnijdt zichzelf binnen element {1}, (gmlId: {0} met coordinaten: {2}...). Probleem: {3}
-validator.core.validation.geometry.unsupported=De geometrie bevat een element dat niet ondersteund wordt, binnen element {1}, (gmlId: {0}). Details: {2}
-validator.core.validation.geometry.exteriorRingCW=Invalide polygoon. De buiten-ring van de polygoon is met de klok mee binnen element {1}, (gmlId: {0} met coordinaten: {2}...)
-validator.core.validation.geometry.interiorRingCCW=Invalide polygoon. De binnen-ring (index={3}) van de polygoon is tegen de klok in binnen element {1}, (gmlId: {0} met coordinaten: {2}...)
-validator.core.validation.geometry.interiorringintersectsexterior=Invalide polygoon. De binnen-ring (index={3}) doorsnijdt de buiten-ring binnen element {1}, (gmlId: {0} met coordinaten: {2}...), Probleem: {4}
-validator.core.validation.geometry.interiorringoutsideexterior=Invalide polygoon. De binnen-ring (index={3}) valt buiten de buiten-ring binnen element {1}, (gmlId: {0} met coordinaten: {2}...)
-#validator.core.validation.geometry.interiorringtouchesexterior=Invalide polygoon. De binnen-ring raakt de buitenring binnen element {1}, (gmlId: {0} met coordinaten: {2}...), Probleem: {3}
-validator.core.validation.geometry.interiorringsintersect=Invalide polygoon. De binnen-ringen doorsnijden elkaar binnen element {1}, (gmlId: {0} met coordinaten: {2}... , en coordinaten {3}), Probleem: {4}
-#validator.core.validation.geometry.interiorringstouch=Invalide polygoon. De binnen-ringen raken elkaar binnen element {1}, (gmlId: {0} met coordinaten: {2}... , en coordinaten {3}), Probleem: {4}
-validator.core.validation.geometry.interiorringswithin=Invalide polygoon. Er is een binnen-ring (index={4}) in een andere binnen-ring (index={5}) aangetroffen binnen element {1}, (gmlId: {0} met coordinaten: {2}... , en coordinaten {3})
-validator.core.validation.geometry.ringnotclosed=Invalide polygoon. De ring is niet gesloten binnen element {1}, (gmlId: {0} met coordinaten: {2}...). Begincoordinaat {3} van de ring is niet gelijk aan de eindcoordinaat {4}.
-#validator.core.validation.geometry.ringselfintersection=Invalide polygoon. De ring doorsnijdt zichzelf binnen element {1}, (gmlId: {0} met coordinaten: {2}...), Probleem: {3}
-validator.core.validation.geometry.event.unexpected=Er is een onverwachte fout opgetreden tijdens geometrische validatie. Gebeurtenis {2} kan niet verwerkt worden voor element {1}, (gmlId: {0}). 
+validator.core.validation.geometry.problem-location-3d=({0} {1} {2})
+validator.core.validation.geometry.curvediscontinuity=Invalid curve. Curve not continuous within element {1}, (gml:id: {0} with coordinates: {2}...). Starting point {3} of segment {4} is not the same as end point {5} of the previous element.
+# This message could be relevant for SecondaryGeometryElementHandler: validator.core.validation.geometry.curvepointduplication=Invalid curve. Duplicate coordinates within element {1}, (gml:id: {0}). Problem: ({2} {3})
+# validator.core.validation.geometry.curveselfintersection=Invalid curve. Self-intersecting curve within element {1}, (gml:id: {0} with coordinates: {2}...)
+validator.core.validation.geometry.unsupported=The geometry contains an unsupported element, within element {1}, (gml:id: {0}). Details: {2}
+validator.core.validation.geometry.exteriorRingCW=Invalid polygon. Outer ring of polygon is clockwise within element {1}, (gml:id: {0} with coordinates: {2}...)
+validator.core.validation.geometry.interiorRingCCW=Invalid polygon. Inner ring of polygon is counterclockwise within element {1}, (gml:id: {0} with coordinates: {2}...)
+#validator.core.validation.geometry.interiorringintersectsexterior=Invalid polygon. Inner ring intersects outer ring within element {1}, (gml:id: {0} with coordinates: {2}...)
+#validator.core.validation.geometry.interiorringoutsideexterior=Invalid polygon. Inner ring is defined outside of outer ring within element {1}, (gml:id: {0} with coordinates: {2}...)
+#validator.core.validation.geometry.interiorringsintersect=Invalid polyoon. Multiple inner rings intersect within element {1}, (gml:id: {0} with coordinates: {2}...)
+#validator.core.validation.geometry.interiorringswithin=Invalid polygon. Nested inner rings within element {1}, (gml:id: {0} with coordinates: {2}...)
+validator.core.validation.geometry.ringnotclosed=Invalid polygon. Ring is not closed within element {1}, (gml:id: {0} with coordinates: {2}...). Starting point {3} is not the same as end point {4}.
 
-validator.core.validation.geometry.unexpected=Er is een onverwachte fout opgetreden tijdens geometrische validatie.
-
-validator.core.validation.dummy=Dummy validatie ter vervanging van validatie {0}
-
-validator.core.validation.schematron.unknown-error=Onbekende fout tijdens regelvalidatie
-validator.core.validation.schematron.valid=Het bestand is valide volgens de regels in {1}
-
-validator.core.validation.schema.location-text=[Regelnr: {0}, kolomnr.: {1}]
-validator.core.validation.schema.valid=Het bestand is valide volgens het schema {1}
-
-validator.core.validation.filename.filename-invalid=Bestandsnaam {0} is niet valide en komt niet overeen met de verwachte bestandsnaam {1} (<plan identificatie>.gml)
-validator.core.validation.filename.filename-valid=Bestandsnaam {0} is valide
-validator.core.validation.filename.planid-not-found=Geen planId kunnen herleiden uit bestand {0}
-
-validator.core.validation.nsversion.version-invalid=Kan geen versie bepalen voor het bestand {0}, geen van de volgende namespaces is gevonden: {1}
-validator.core.validation.nsversion.version-no-validation=Geen validatie geconfigureerd voor bestanden met versie {0}
-
-validator.core.validation.signature.missing=Er is geen handtekening in bestand {0} aanwezig
-validator.core.validation.signature.valid=De handtekening in bestand {0} is correct
-validator.core.validation.signature.valid-with-waivers=De handtekening in bestand {0} is correct, maar het ondertekendende certificaat (of uitgevers ervan) niet
-validator.core.validation.keyinfo.missing=Er is geen informatie over de gebruikte sleutel in bestand {0} aanwezig
-validator.core.validation.signature.resource-error=Er is een fout opgetreden bij het vinden van een resource, mogelijk foutieve of ontbrekende URI: {0}
-
-validator.core.validation.signature.novalid-signature=De handtekening in bestand {0} is niet correct
-validator.core.validation.signature.novalid-digest=De hash van bestand {0} is niet correct
-validator.core.validation.signature.novalid-selfreference=De handtekening in bestand {0} wijst niet naar zichzelf
-validator.core.validation.signature.unknown-error=Onbekende fout tijdens authenticatie
-
-validator.core.validation.signature.certificate-principal=Het bestand is ondertekend door {0}
-validator.core.validation.signature.certificate-none=Geen certificaat in de handtekening aanwezig
-validator.core.validation.signature.certificate-issuer-unknown=De uitgever van het certificaat (of het uitgever certificaat) ({0}) is onbekend. Uitgever: {1}
-validator.core.validation.signature.root-certificate-unknown=Het root certificaat ({0}) is onbekend
-validator.core.validation.signature.fake-root-certificate=Het root certificaat {0} is mogelijk een nep certificaat dat lijkt op een echt root certificaat.
-validator.core.validation.signature.no-signing-certificates=Er zijn geen certificaten aanwezig voor ondertekening in bestand {0}.
-validator.core.validation.signature.cannot-determine-signing-certificate=Het ondertekenende certificaat kan niet bepaald worden voor bestand {0}.
-validator.core.validation.signature.cannot-determine-certificate-order=De juiste volgorde van certificaten kan niet worden vastgesteld. Er zijn meer certificaten aanwezig dan de langst mogelijke te vormen keten van gekoppelde certificaten. Gevonden certificaten: {0}
-validator.core.validation.signature.certificate-expired=Het certificaat ({0}) is verlopen
-validator.core.validation.signature.root-certificate-expired=Het root-certificaat ({0}) is verlopen
-validator.core.validation.signature.certificate-not-yet-valid=Het certificaat ({0}) is nog niet geldig
-validator.core.validation.signature.certificate-issuer-may-not-sign=De uitgever van het certificaat (of het uitgever certificaat) ({0}) mag geen certificaten ondertekenen
-validator.core.validation.signature.certificate-may-not-sign-objects=Het certificaat ({0}) mag geen objecten ondertekenen
-validator.core.validation.signature.certificate-signature-invalid=De handtekening van het certificaat (of het uitgever certificaat) ({0}) heeft geen geldige handtekening
-validator.core.validation.signature.certificate-key-invalid=De public-key van de uitgever komt niet overeen met het certificaat (of het uitgever certificaat) ({0})
-validator.core.validation.signature.certificate-encoding-invalid=Het certificaat (of het uitgever certificaat) ({0}) heeft een ongeldige codering
-validator.core.validation.signature.certificate-algorithm-invalid=Het certificaat (of het uitgever certificaat) ({0}) is ondertekend met een niet ondersteund algoritme
-validator.core.validation.signature.certificate-revoked-uncertain=Intrekking van het certificaat (of het uitgever certificaat) ({0}) onzeker wegens problemen met download of lezen van CRL bestanden
-validator.core.validation.signature.certificate-revoked=Het certificaat (of het uitgever certificaat) ({0}) is ingetrokken
-validator.core.validation.signature.certificate-ocsp-revoked=Het certificaat (of het uitgever certificaat) ({0}) is niet geldig volgens OCSP
-validator.core.validation.signature.certificate-ocsp-uncertain=Geldigheid van het certificaat (of het uitgever certificaat) ({0}) onzeker wegens technische problemen met OCSP of validatie
-validator.core.validation.signature.crl-invalid=De CRL file voor certificaat met issuer {0} is invalide of kan niet gelezen worden. CRL adres = {1}. Details: {2}
-validator.core.validation.signature.crl-downloaded-fail=De CRL file voor certificaat met issuer {0} kan niet gedownload worden van adres {1}
-validator.core.validation.signature.ocsp-call-error=De OCSP aanroep voor certificaat issuer {0} is niet succesvol verlopen. OCSP adres= {1}. Details: {2}
-validator.core.validation.signature.ocsp-revoked-certificate=OCSP meldt intrekking voor certificaat {0}. OCSP adres: {1}
+validator.core.validation.geometry.surfacepatchesnotconnected=Invalid surface (gml:id: {0}). The patches of the surface are not connected.
+validator.core.validation.geometry.repetitionincurvesegment=Invalid geometry (gml:id: {0}). Repetition of coordinate in curve segment. Internal representation of the curve (segment): {1}. Repeated point: {2}.
 
 
+validator.core.validation.schematron.unknown-error=Unknown error during rule validation
+validator.core.validation.schematron.valid=The file is valid according to rules in {1}
 
-validator.core.validation.reference.no-planid=Geen planId kunen afleiden uit het plan
-validator.core.validation.reference.no-plan=Geen plan gevonden in manifest met planId: {0}
-validator.core.validation.reference.wrong-imro=Plan element in Manifest met id {0} verwijst niet naar het te valideren IMRO bestand: {1} maar naar het bestand: {2}
-validator.core.validation.reference.geleideformulier-absent=Geen valide geleideFormulier aangetroffen. Daarom geen Referentie validatie van parameters van het geleideformulier
-validator.core.validation.reference.geleideformulier-manifest-partsnum-different=De onderdelen in het geleideformulier (aantal: {0}) zijn niet gelijk aan de onderdelen in het manifest (aantal: {1})
-validator.core.validation.reference.geleideformulier-field-empty={0} is leeg of afwezig in het geleideforumlier
-validator.core.validation.reference.manifest-field-empty={0} is leeg of afwezig in manifest
-validator.core.validation.reference.geleideformulier-manifest-field-different={0} in het geleideformulier ({1}) is niet gelijk aan {0} in manifest ({2})
-validator.core.validation.reference.plan-field-empty={0} is leeg of afwezig in plan
-validator.core.validation.reference.plan-manifest-field-different={0} in plan ({1}) is niet gelijk aan {0} in manifest ({2})
-validator.core.validation.reference.plan-manifest-filename-absent=Filenaam in plan komt niet voor in het manifest: {0}
-validator.core.validation.reference.references-valid=De referenties zijn valide
-
-validator.core.validation.supported-plan-types.planid-not-found=Geen planId kunnen herleiden uit bestand {0}
-validator.core.validation.supported-plan-types.plan-type-not-supported=Plannen met plangebied van type {0} worden op dit moment niet ondersteund
-validator.core.validation.supported-plan-types.plan-type-supported=Plannen met plangebied van type {0} worden ondersteund
-
-validator.core.validation.illegal.content.detected=Illegale inhoud gedetecteerd: {0}
+validator.core.validation.schema.location-text=[Line: {0}, column.: {1}]
+validator.core.validation.schema.valid=The file is according to schema in {1}
