--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ apply plugin: 'maven'
 apply plugin: 'eclipse'
 
 ext.deegreeVersion = '3.3.17'
-ext.basexVersion = '8.5.3'
+ext.basexVersion = '8.5.5-ii'
 
 repositories {
 	maven {
@@ -117,8 +117,6 @@ dependencies {
 	compile('org.apache.commons:commons-jcs-core:2.0-beta-1')
 	compile 'com.github.ben-manes.caffeine:caffeine:2.3.1'
 
-	compile "org.basex:basex-api:$basexVersion"
-
 	compile group: 'org.slf4j', name: 'slf4j-api', version: etf_slf4jApiVersion
 
 	compile group: 'xerces', name: 'xercesImpl', version: etf_xercesVersion
@@ -132,9 +130,13 @@ dependencies {
 
 	compileOnly group: 'javax.xml.bind', name: 'jaxb-api', version:'2.2.12'
 
+	compileOnly "org.basex:basex:$basexVersion"
+	testCompile "org.basex:basex:$basexVersion"
+	compileOnly "org.basex:basex-api:$basexVersion"
+	testCompile "org.basex:basex-api:$basexVersion"
+
     testCompile group: 'net.sf.saxon', name: 'Saxon-HE', version: '9.7.0-4'
     testCompile group: 'junit', name: 'junit', version: etf_junitTestVersion
-  	testCompile "org.basex:basex:$basexVersion"
 	testCompile group: 'ch.qos.logback', name: 'logback-classic', version: etf_logbackVersion
 	testCompile "xmlunit:xmlunit:1.3"
 }
