--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'eclipse'
 
-ext.basexVersion = '8.5.5-ii'
+ext.basexVersion = '8.6.7'
 ext.deegreeVersion = '3.3.20'
 
 repositories {
