--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,7 @@ before_script:
 script:
 - "./gradlew init"
 - "./gradlew -Dorg.gradle.project.ii.etfdev.quality.reports=true test jacocoTestReport"
+before_install:
+- "[[ -n "$CODACY_PROJECT_TOKEN" ]] && wget -O ~/codacy-coverage-reporter-assembly.jar https://repo.jenkins-ci.org/public/com/codacy/codacy-coverage-reporter/5.0.310/codacy-coverage-reporter-5.0.310-assembly.jar"
+after_success:
+- "[[ -n "$CODACY_PROJECT_TOKEN" ]] && java -jar ~/codacy-coverage-reporter-assembly.jar report -l Java -r build/reports/jacoco/test/jacocoTestReport.xml"
