improve arc interpolation and isSimple check for geoms
- Add methods to control the maximum error and maximum number of points
used for interpolating arcs.
- Ensure that custom curve linearizer is also used during geometry
validation.
- Add location of self-intersection if detected when checking if a
geometry is simple.

Signed-off-by: Johannes Echterhoff <echterhoff@interactive-instruments.de>

--- a/build.gradle
+++ b/build.gradle
@@ -185,6 +185,8 @@ jar {
 
 javadoc {
 	destinationDir = file("$projectDir/docs/javadoc")
+    // without the -quiet option, the build fails
+    options.addStringOption('Xdoclint:none', '-quiet')
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
