add geometry validator, fix ring linearization, merge element handlers
IIGeometryValidator: Remove a lot of checks that are not necessary
because they are handled by the JTS validation. Thereby also remove a
System.out.println(..) statement that could produce unnecessary log
entries. The geometry validator now uses the custom curve linearizer,
with linearization criterion as defined for the GmlGeoX instance.

Ring linearization: The IIGeometryFactory now creates IIRing objects,
which implement a buildJTSGeometry() method that uses the custom curve
linearizer. The DefaultRing implementation from deegree did not use that
linearization.

Merging of element handlers: The
SecondaryGeometryElementValidationHandler has been merged with the
GeometryElementHandler. The latter now also covers the checks of the
former (which has been removed). The primary reason was to re-use
computed JTS geometries for the different validation checks as much as
possible. GeometricValidationImpl.java has been removed as well, since
it was not used within GmlGeoX.



Signed-off-by: Johannes Echterhoff <echterhoff@interactive-instruments.de>

--- a/src/main/resources/validator-core-messages.properties
+++ b/src/main/resources/validator-core-messages.properties
@@ -37,6 +37,7 @@ validator.core.validation.geometry.ringnotclosed=Invalid polygon. Ring is not cl
 
 validator.core.validation.geometry.surfacepatchesnotconnected=Invalid surface (gml:id: {0}). The patches of the surface are not connected.
 validator.core.validation.geometry.repetitionincurvesegment=Invalid geometry (gml:id: {0}). Repetition of coordinate in curve segment. Internal representation of the curve (segment): {1}. Repeated point: {2}.
+validator.core.validation.geometry.unsupportedgeometrytype=Cannot check connectivity of polygon patches for surface (gml:id: {0}). Reason: {1}.
 
 
 validator.core.validation.schematron.unknown-error=Unknown error during rule validation
