--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'eclipse'
 
-ext.basexVersion = '9.2.4'
+ext.basexVersion = '9.3-SNAPSHOT'
 ext.deegreeVersion = '3.3.20'
 
 repositories {
@@ -75,6 +75,9 @@ dependencies {
 
 	// Overwrite
 	compile('com.vividsolutions:jts:1.13')
+	
+	// https://mvnrepository.com/artifact/org.jgrapht/jgrapht-core
+    compile group: 'org.jgrapht', name: 'jgrapht-core', version: '1.3.1'
 
 	// Overwrite
 	compile('org.apache.httpcomponents:httpclient:4.5.1') {
