fix: build failure (filename)

--- a/build.gradle
+++ b/build.gradle
@@ -225,5 +225,5 @@ task copyGmlGeoXToRepo(dependsOn: jar) {
 }
 
 install {
-	dependsOn = ["copyGmlGeoXToRepo"]
+	dependsOn = ["sourcesJar", "copyGmlGeoXToRepo"]
 }
